test/trivial/deitz/vars-scopes/scope2.good
scope2.chpl:5: In function 'bar':
scope2.chpl:6: error: 'foo' used before defined
scope2.chpl:11: note: defined here
